CostalCloud/force-app/main/default/objects/Plumbing__c.object
<CustomObject>
    <label>Plumbing</label>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>Plumbing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plumbing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>