CostalCloud/force-app/main/default/objects/Plumbing__c/fields/Center_on_Wall__c.field-meta.xml
<CustomField>
    <fullName>Center_on_Wall__c</fullName>
    <label>Center on Wall</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>