CostalCloud/force-app/main/default/objects/Plumbing__c/fields/Center_on_Wall_Fraction__c.field-meta.xml
<CustomField>
    <fullName>Center_on_Wall_Fraction__c</fullName>
    <label>Center on Wall Fraction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fraction_values</valueSetName>
    </valueSet>
</CustomField>