CostalCloud/force-app/main/default/objects/Plumbing__c/fields/Centerline_L_or_R__c.field-meta.xml
<CustomField>
    <fullName>Centerline_L_or_R__c</fullName>
    <label>Centerline L or R</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>