CostalCloud/force-app/main/default/objects/Plumbing__c/fields/Floor_to_Center__c.field-meta.xml
<CustomField>
    <fullName>Floor_to_Center__c</fullName>
    <label>Floor to Center</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>