CostalCloud/force-app/main/default/objects/Plumbing__c/fields/Floor_to_Center_Fraction__c.field-meta.xml
<CustomField>
    <fullName>Floor_to_Center_Fraction__c</fullName>
    <label>Floor to Center Fraction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fraction_values</valueSetName>
    </valueSet>
</CustomField>