CostalCloud/force-app/main/default/objects/Plumbing__c/fields/H2O_or_Gas__c.field-meta.xml
<CustomField>
    <fullName>H2O_or_Gas__c</fullName>
    <label>H2O or Gas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>H2O</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>