CostalCloud/force-app/main/default/objects/Plumbing__c/fields/M_from_R_or_L__c.field-meta.xml
<CustomField>
    <fullName>M_from_R_or_L__c</fullName>
    <label>M from R or L</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>