CostalCloud/force-app/main/default/objects/Plumbing__c/fields/Overall_Height__c.field-meta.xml
<CustomField>
    <fullName>Overall_Height__c</fullName>
    <label>Overall Height</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>