CostalCloud/force-app/main/default/objects/Plumbing__c/fields/Overall_Width__c.field-meta.xml
<CustomField>
    <fullName>Overall_Width__c</fullName>
    <label>Overall Width</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>