CostalCloud/force-app/main/default/objects/Plumbing__c/fields/Plumbing_Measurement_Image__c.field-meta.xml
<CustomField>
    <fullName>Plumbing_Measurement_Image__c</fullName>
    <label>Plumbing Measurement Image</label>
    <type>TextArea</type>
</CustomField>