CostalCloud/force-app/main/default/objects/Plumbing__c/fields/Plumbing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Plumbing_Notes__c</fullName>
    <label>Plumbing Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>