CostalCloud/force-app/main/default/objects/Plumbing__c/fields/Plumbing_Photo__c.field-meta.xml
<CustomField>
    <fullName>Plumbing_Photo__c</fullName>
    <label>Plumbing Photo</label>
    <type>TextArea</type>
</CustomField>