CostalCloud/force-app/main/default/objects/Plumbing__c/fields/Sink_Centerline__c.field-meta.xml
<CustomField>
    <fullName>Sink_Centerline__c</fullName>
    <label>Sink Centerline</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>