CostalCloud/force-app/main/default/objects/Plumbing__c/fields/Sink_Centerline_Fraction__c.field-meta.xml
<CustomField>
    <fullName>Sink_Centerline_Fraction__c</fullName>
    <label>Sink Centerline Fraction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fraction_values</valueSetName>
    </valueSet>
</CustomField>