CostalCloud/force-app/main/default/objects/Plumbing__c/fields/Thru_Wall_or_Floor__c.field-meta.xml
<CustomField>
    <fullName>Thru_Wall_or_Floor__c</fullName>
    <label>Thru Wall or Floor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wall</fullName>
            </value>
            <value>
                <fullName>Floor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>